DEPLOY: deployment ready - 1

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DEBUG=True
 ENVIRONMENT=local
 SITE_ID=1
-PROTOCOL=http
-DOMAIN=127.0.0.1:8000
+PROTOCOL=https
+DOMAIN=alitariq.pythonanywhere.com
 ALLOWED_HOSTS=127.0.0.1,localhost,alitariq.pythonanywhere.com
 
 DB_NAME=db
